Fix incorrect error message for ScriptProcessorNode

The value printed when the number of output channels exceeded the
maximum value was incorrectly printing the number of input channels.

The test correctly checked this, but the expected result was
incorrectly checking for the incorrect value.

BUG=645806
TEST=dom-exceptions.html updated expectations

Review-Url: https://codereview.chromium.org/2332043002
Cr-Commit-Position: refs/heads/master@{#418071}

Former-commit-id: 5196ddbea6597d66d839cb25f7acee9855491bc0